force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Challenge_Type__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Challenge Type code. Used when integrating with Influtiive Advocate Hub.</inlineHelpText>
    <label>Challenge Type</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>