force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Is_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Event_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Type</label>
    <type>Checkbox</type>
</CustomField>