force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Managed__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All requests of this type will be Managed requests and will be handled by the CRP team.</description>
    <inlineHelpText>All requests of this type will be Managed requests and will be handled by the CRP team.</inlineHelpText>
    <label>Managed</label>
    <type>Checkbox</type>
</CustomField>