force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Note__c.field-meta.xml
<CustomField>
    <fullName>refedge__Note__c</fullName>
    <inlineHelpText>Visible only on the Edit page of Referenceability Types.</inlineHelpText>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>