force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Ref_Limit_to_Acct_or_Cntct__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Limit_to_Acct_or_Cntct__c</fullName>
    <description>Selecting &quot;Account&quot; indicates this should only show when adding Referenceability to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Referenceability to Contacts.</description>
    <inlineHelpText>Selecting &quot;Account&quot; indicates this should only show when adding Referenceability to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Referenceability to Contacts.</inlineHelpText>
    <label>Limit to Account or Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>