force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Sales_Reward__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Reward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Reward</label>
    <type>Checkbox</type>
</CustomField>