force-app/main/default/objects/refedge__Referenceability_Type__c/fields/refedge__Visible__c.field-meta.xml
<CustomField>
    <fullName>refedge__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Controls the overall visibility of this Referenceability Type throughout ReferenceEdge – Referenceability, Requests, Projects, Nominations, Reference Use.</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>