force-app/main/default/objects/refedge__Referenceability_Type__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Referenceability_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>