force-app/main/default/objects/refedge__Referenceability_Type__c/listViews/refedge__Types_without_User_Rewards.listView-meta.xml
<ListView>
    <fullName>refedge__Types_without_User_Rewards</fullName>
    <columns>NAME</columns>
    <columns>refedge__Referenceability_Type__c</columns>
    <columns>refedge__Request_type__c</columns>
    <columns>refedge__Project_type__c</columns>
    <columns>refedge__Is_Event_Type__c</columns>
    <columns>refedge__Ref_Limit_to_Acct_or_Cntct__c</columns>
    <columns>refedge__Managed__c</columns>
    <columns>refedge__Reward_points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Sales_Reward__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Types without User Rewards</label>
</ListView>